parser.output
Terminals unused in grammar

   DECLARE_ONLY
   BLOCK


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: functions statement
    3          | /* empty */

    4 statement: ';'
    5          | expression ';'
    6          | PRINT expression ';'
    7          | assignment_statement ';'
    8          | declaration_statement ';'
    9          | while_statement
   10          | do_while_statement
   11          | for_statement
   12          | function_call ';'
   13          | function_declaration
   14          | return_statement
   15          | if_statement
   16          | switch_statement
   17          | '{' statement_list '}'
   18          | BREAK ';'
   19          | CONTINUE ';'

   20 function_declaration: FUNCTION declaration_statement '(' parameter_list ')' '{' statement return_statement '}'

   21 parameter_list: declaration_statement ',' parameter_list
   22               | declaration_statement
   23               | /* empty */

   24 function_call: VARIABLE '(' comma_expressions ')'

   25 return_statement: RETURN statement

   26 comma_expressions: comma_expressions ',' expression
   27                  | expression
   28                  | /* empty */

   29 while_statement: WHILE '(' expression ')' statement

   30 do_while_statement: DO statement_list UNTIL expression ';'

   31 for_statement: FOR '(' for_declaration ';' for_mid_stmt ';' for_assignment ')' '{' statement_list '}'

   32 if_statement: IF '(' expression ')' '{' statement_list '}'
   33             | IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

   34 default_statement: DEFAULT ':' statement

   35 switch_statement: SWITCH '(' VARIABLE ')' '{' cases '}'
   36                 | SWITCH '(' VARIABLE ')' '{' cases default_statement '}'

   37 cases: CASE INTEGER ':' statement BREAK ';' cases
   38      | CASE INTEGER ':' statement BREAK ';'

   39 for_mid_stmt: /* empty */
   40             | PRINT expression
   41             | declaration_statement
   42             | expression

   43 assignment_statement: VARIABLE '=' function_call
   44                     | VARIABLE '=' rhs_nested_expression

   45 for_assignment: /* empty */
   46               | assignment_statement

   47 declaration_statement: data_type VARIABLE
   48                      | data_type VARIABLE '=' rhs_nested_expression
   49                      | CONST data_type VARIABLE '=' rhs_nested_expression

   50 data_type: INT_TYPE
   51          | FLOAT_TYPE
   52          | BOOL_TYPE
   53          | STRING_TYPE
   54          | VOID_TYPE

   55 for_declaration: /* empty */
   56                | declaration_statement

   57 rhs_nested_expression: expression
   58                      | VARIABLE '=' rhs_nested_expression
   59                      | '(' VARIABLE '=' rhs_nested_expression ')'

   60 statement_list: statement
   61               | statement_list statement

   62 expression: INTEGER
   63           | FLOAT
   64           | STRING
   65           | VARIABLE
   66           | BOOL
   67           | '-' expression
   68           | NOT expression
   69           | expression '+' expression
   70           | expression '-' expression
   71           | expression '*' expression
   72           | expression '/' expression
   73           | expression '%' expression
   74           | expression '<' expression
   75           | expression '>' expression
   76           | expression GREATER_EQUAL expression
   77           | expression LESS_EQUAL expression
   78           | expression NOT_EQUAL expression
   79           | expression EQUAL expression
   80           | expression AND expression
   81           | expression OR expression
   82           | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 73
'(' (40) 20 24 29 31 32 33 35 36 59 82
')' (41) 20 24 29 31 32 33 35 36 59 82
'*' (42) 71
'+' (43) 69
',' (44) 21 26
'-' (45) 67 70
'/' (47) 72
':' (58) 34 37 38
';' (59) 4 5 6 7 8 12 18 19 30 31 37 38
'<' (60) 74
'=' (61) 43 44 48 49 58 59
'>' (62) 75
'{' (123) 17 20 31 32 33 35 36
'}' (125) 17 20 31 32 33 35 36
error (256)
INTEGER (258) 37 38 62
FLOAT (259) 63
STRING (260) 64
BOOL (261) 66
VARIABLE (262) 24 35 36 43 44 47 48 49 58 59 65
IF (263) 32 33
SWITCH (264) 35 36
CASE (265) 37 38
DEFAULT (266) 34
FOR (267) 31
WHILE (268) 29
DO (269) 30
UNTIL (270) 30
BREAK (271) 18 37 38
CONTINUE (272) 19
CONST (273) 49
INT_TYPE (274) 50
FLOAT_TYPE (275) 51
BOOL_TYPE (276) 52
STRING_TYPE (277) 53
VOID_TYPE (278) 54
DECLARE_ONLY (279)
FUNCTION (280) 20
PRINT (281) 6 40
RETURN (282) 25
BLOCK (283)
IFX (284)
ELSE (285) 33
FUNC (286)
OR (287) 81
AND (288) 80
NOT_EQUAL (289) 78
EQUAL (290) 79
LESS_EQUAL (291) 77
GREATER_EQUAL (292) 76
NOT (293) 68
NEGATIVE (294)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
functions (57)
    on left: 2 3, on right: 1 2
statement (58)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 2
    20 25 29 34 37 38 60 61
function_declaration (59)
    on left: 20, on right: 13
parameter_list (60)
    on left: 21 22 23, on right: 20 21
function_call (61)
    on left: 24, on right: 12 43
return_statement (62)
    on left: 25, on right: 14 20
comma_expressions (63)
    on left: 26 27 28, on right: 24 26
while_statement (64)
    on left: 29, on right: 9
do_while_statement (65)
    on left: 30, on right: 10
for_statement (66)
    on left: 31, on right: 11
if_statement (67)
    on left: 32 33, on right: 15
default_statement (68)
    on left: 34, on right: 36
switch_statement (69)
    on left: 35 36, on right: 16
cases (70)
    on left: 37 38, on right: 35 36 37
for_mid_stmt (71)
    on left: 39 40 41 42, on right: 31
assignment_statement (72)
    on left: 43 44, on right: 7 46
for_assignment (73)
    on left: 45 46, on right: 31
declaration_statement (74)
    on left: 47 48 49, on right: 8 20 21 22 41 56
data_type (75)
    on left: 50 51 52 53 54, on right: 47 48 49
for_declaration (76)
    on left: 55 56, on right: 31
rhs_nested_expression (77)
    on left: 57 58 59, on right: 44 48 49 58 59
statement_list (78)
    on left: 60 61, on right: 17 30 31 32 33 61
expression (79)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82, on right: 5 6 26 27 29 30 32 33 40 42 57 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (functions)

    program    go to state 1
    functions  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: functions .
    2 functions: functions . statement

    INTEGER      shift, and go to state 4
    FLOAT        shift, and go to state 5
    STRING       shift, and go to state 6
    BOOL         shift, and go to state 7
    VARIABLE     shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    RETURN       shift, and go to state 24
    '-'          shift, and go to state 25
    NOT          shift, and go to state 26
    ';'          shift, and go to state 27
    '{'          shift, and go to state 28
    '('          shift, and go to state 29

    $default  reduce using rule 1 (program)

    statement              go to state 30
    function_declaration   go to state 31
    function_call          go to state 32
    return_statement       go to state 33
    while_statement        go to state 34
    do_while_statement     go to state 35
    for_statement          go to state 36
    if_statement           go to state 37
    switch_statement       go to state 38
    assignment_statement   go to state 39
    declaration_statement  go to state 40
    data_type              go to state 41
    expression             go to state 42


state 3

    0 $accept: program $end .

    $default  accept


state 4

   62 expression: INTEGER .

    $default  reduce using rule 62 (expression)


state 5

   63 expression: FLOAT .

    $default  reduce using rule 63 (expression)


state 6

   64 expression: STRING .

    $default  reduce using rule 64 (expression)


state 7

   66 expression: BOOL .

    $default  reduce using rule 66 (expression)


state 8

   24 function_call: VARIABLE . '(' comma_expressions ')'
   43 assignment_statement: VARIABLE . '=' function_call
   44                     | VARIABLE . '=' rhs_nested_expression
   65 expression: VARIABLE .

    '='  shift, and go to state 43
    '('  shift, and go to state 44

    $default  reduce using rule 65 (expression)


state 9

   32 if_statement: IF . '(' expression ')' '{' statement_list '}'
   33             | IF . '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    '('  shift, and go to state 45


state 10

   35 switch_statement: SWITCH . '(' VARIABLE ')' '{' cases '}'
   36                 | SWITCH . '(' VARIABLE ')' '{' cases default_statement '}'

    '('  shift, and go to state 46


state 11

   31 for_statement: FOR . '(' for_declaration ';' for_mid_stmt ';' for_assignment ')' '{' statement_list '}'

    '('  shift, and go to state 47


state 12

   29 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 48


state 13

   30 do_while_statement: DO . statement_list UNTIL expression ';'

    INTEGER      shift, and go to state 4
    FLOAT        shift, and go to state 5
    STRING       shift, and go to state 6
    BOOL         shift, and go to state 7
    VARIABLE     shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    RETURN       shift, and go to state 24
    '-'          shift, and go to state 25
    NOT          shift, and go to state 26
    ';'          shift, and go to state 27
    '{'          shift, and go to state 28
    '('          shift, and go to state 29

    statement              go to state 49
    function_declaration   go to state 31
    function_call          go to state 32
    return_statement       go to state 33
    while_statement        go to state 34
    do_while_statement     go to state 35
    for_statement          go to state 36
    if_statement           go to state 37
    switch_statement       go to state 38
    assignment_statement   go to state 39
    declaration_statement  go to state 40
    data_type              go to state 41
    statement_list         go to state 50
    expression             go to state 42


state 14

   18 statement: BREAK . ';'

    ';'  shift, and go to state 51


state 15

   19 statement: CONTINUE . ';'

    ';'  shift, and go to state 52


state 16

   49 declaration_statement: CONST . data_type VARIABLE '=' rhs_nested_expression

    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21

    data_type  go to state 53


state 17

   50 data_type: INT_TYPE .

    $default  reduce using rule 50 (data_type)


state 18

   51 data_type: FLOAT_TYPE .

    $default  reduce using rule 51 (data_type)


state 19

   52 data_type: BOOL_TYPE .

    $default  reduce using rule 52 (data_type)


state 20

   53 data_type: STRING_TYPE .

    $default  reduce using rule 53 (data_type)


state 21

   54 data_type: VOID_TYPE .

    $default  reduce using rule 54 (data_type)


state 22

   20 function_declaration: FUNCTION . declaration_statement '(' parameter_list ')' '{' statement return_statement '}'

    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21

    declaration_statement  go to state 54
    data_type              go to state 41


state 23

    6 statement: PRINT . expression ';'

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 56


state 24

   25 return_statement: RETURN . statement

    INTEGER      shift, and go to state 4
    FLOAT        shift, and go to state 5
    STRING       shift, and go to state 6
    BOOL         shift, and go to state 7
    VARIABLE     shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    RETURN       shift, and go to state 24
    '-'          shift, and go to state 25
    NOT          shift, and go to state 26
    ';'          shift, and go to state 27
    '{'          shift, and go to state 28
    '('          shift, and go to state 29

    statement              go to state 57
    function_declaration   go to state 31
    function_call          go to state 32
    return_statement       go to state 33
    while_statement        go to state 34
    do_while_statement     go to state 35
    for_statement          go to state 36
    if_statement           go to state 37
    switch_statement       go to state 38
    assignment_statement   go to state 39
    declaration_statement  go to state 40
    data_type              go to state 41
    expression             go to state 42


state 25

   67 expression: '-' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 58


state 26

   68 expression: NOT . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 59


state 27

    4 statement: ';' .

    $default  reduce using rule 4 (statement)


state 28

   17 statement: '{' . statement_list '}'

    INTEGER      shift, and go to state 4
    FLOAT        shift, and go to state 5
    STRING       shift, and go to state 6
    BOOL         shift, and go to state 7
    VARIABLE     shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    RETURN       shift, and go to state 24
    '-'          shift, and go to state 25
    NOT          shift, and go to state 26
    ';'          shift, and go to state 27
    '{'          shift, and go to state 28
    '('          shift, and go to state 29

    statement              go to state 49
    function_declaration   go to state 31
    function_call          go to state 32
    return_statement       go to state 33
    while_statement        go to state 34
    do_while_statement     go to state 35
    for_statement          go to state 36
    if_statement           go to state 37
    switch_statement       go to state 38
    assignment_statement   go to state 39
    declaration_statement  go to state 40
    data_type              go to state 41
    statement_list         go to state 60
    expression             go to state 42


state 29

   82 expression: '(' . expression ')'

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 61


state 30

    2 functions: functions statement .

    $default  reduce using rule 2 (functions)


state 31

   13 statement: function_declaration .

    $default  reduce using rule 13 (statement)


state 32

   12 statement: function_call . ';'

    ';'  shift, and go to state 62


state 33

   14 statement: return_statement .

    $default  reduce using rule 14 (statement)


state 34

    9 statement: while_statement .

    $default  reduce using rule 9 (statement)


state 35

   10 statement: do_while_statement .

    $default  reduce using rule 10 (statement)


state 36

   11 statement: for_statement .

    $default  reduce using rule 11 (statement)


state 37

   15 statement: if_statement .

    $default  reduce using rule 15 (statement)


state 38

   16 statement: switch_statement .

    $default  reduce using rule 16 (statement)


state 39

    7 statement: assignment_statement . ';'

    ';'  shift, and go to state 63


state 40

    8 statement: declaration_statement . ';'

    ';'  shift, and go to state 64


state 41

   47 declaration_statement: data_type . VARIABLE
   48                      | data_type . VARIABLE '=' rhs_nested_expression

    VARIABLE  shift, and go to state 65


state 42

    5 statement: expression . ';'
   69 expression: expression . '+' expression
   70           | expression . '-' expression
   71           | expression . '*' expression
   72           | expression . '/' expression
   73           | expression . '%' expression
   74           | expression . '<' expression
   75           | expression . '>' expression
   76           | expression . GREATER_EQUAL expression
   77           | expression . LESS_EQUAL expression
   78           | expression . NOT_EQUAL expression
   79           | expression . EQUAL expression
   80           | expression . AND expression
   81           | expression . OR expression

    OR             shift, and go to state 66
    AND            shift, and go to state 67
    '>'            shift, and go to state 68
    '<'            shift, and go to state 69
    NOT_EQUAL      shift, and go to state 70
    EQUAL          shift, and go to state 71
    LESS_EQUAL     shift, and go to state 72
    GREATER_EQUAL  shift, and go to state 73
    '+'            shift, and go to state 74
    '-'            shift, and go to state 75
    '*'            shift, and go to state 76
    '/'            shift, and go to state 77
    '%'            shift, and go to state 78
    ';'            shift, and go to state 79


state 43

   43 assignment_statement: VARIABLE '=' . function_call
   44                     | VARIABLE '=' . rhs_nested_expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 80
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 81

    function_call          go to state 82
    rhs_nested_expression  go to state 83
    expression             go to state 84


state 44

   24 function_call: VARIABLE '(' . comma_expressions ')'

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    $default  reduce using rule 28 (comma_expressions)

    comma_expressions  go to state 85
    expression         go to state 86


state 45

   32 if_statement: IF '(' . expression ')' '{' statement_list '}'
   33             | IF '(' . expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 87


state 46

   35 switch_statement: SWITCH '(' . VARIABLE ')' '{' cases '}'
   36                 | SWITCH '(' . VARIABLE ')' '{' cases default_statement '}'

    VARIABLE  shift, and go to state 88


state 47

   31 for_statement: FOR '(' . for_declaration ';' for_mid_stmt ';' for_assignment ')' '{' statement_list '}'

    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21

    $default  reduce using rule 55 (for_declaration)

    declaration_statement  go to state 89
    data_type              go to state 41
    for_declaration        go to state 90


state 48

   29 while_statement: WHILE '(' . expression ')' statement

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 91


state 49

   60 statement_list: statement .

    $default  reduce using rule 60 (statement_list)


state 50

   30 do_while_statement: DO statement_list . UNTIL expression ';'
   61 statement_list: statement_list . statement

    INTEGER      shift, and go to state 4
    FLOAT        shift, and go to state 5
    STRING       shift, and go to state 6
    BOOL         shift, and go to state 7
    VARIABLE     shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    UNTIL        shift, and go to state 92
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    RETURN       shift, and go to state 24
    '-'          shift, and go to state 25
    NOT          shift, and go to state 26
    ';'          shift, and go to state 27
    '{'          shift, and go to state 28
    '('          shift, and go to state 29

    statement              go to state 93
    function_declaration   go to state 31
    function_call          go to state 32
    return_statement       go to state 33
    while_statement        go to state 34
    do_while_statement     go to state 35
    for_statement          go to state 36
    if_statement           go to state 37
    switch_statement       go to state 38
    assignment_statement   go to state 39
    declaration_statement  go to state 40
    data_type              go to state 41
    expression             go to state 42


state 51

   18 statement: BREAK ';' .

    $default  reduce using rule 18 (statement)


state 52

   19 statement: CONTINUE ';' .

    $default  reduce using rule 19 (statement)


state 53

   49 declaration_statement: CONST data_type . VARIABLE '=' rhs_nested_expression

    VARIABLE  shift, and go to state 94


state 54

   20 function_declaration: FUNCTION declaration_statement . '(' parameter_list ')' '{' statement return_statement '}'

    '('  shift, and go to state 95


state 55

   65 expression: VARIABLE .

    $default  reduce using rule 65 (expression)


state 56

    6 statement: PRINT expression . ';'
   69 expression: expression . '+' expression
   70           | expression . '-' expression
   71           | expression . '*' expression
   72           | expression . '/' expression
   73           | expression . '%' expression
   74           | expression . '<' expression
   75           | expression . '>' expression
   76           | expression . GREATER_EQUAL expression
   77           | expression . LESS_EQUAL expression
   78           | expression . NOT_EQUAL expression
   79           | expression . EQUAL expression
   80           | expression . AND expression
   81           | expression . OR expression

    OR             shift, and go to state 66
    AND            shift, and go to state 67
    '>'            shift, and go to state 68
    '<'            shift, and go to state 69
    NOT_EQUAL      shift, and go to state 70
    EQUAL          shift, and go to state 71
    LESS_EQUAL     shift, and go to state 72
    GREATER_EQUAL  shift, and go to state 73
    '+'            shift, and go to state 74
    '-'            shift, and go to state 75
    '*'            shift, and go to state 76
    '/'            shift, and go to state 77
    '%'            shift, and go to state 78
    ';'            shift, and go to state 96


state 57

   25 return_statement: RETURN statement .

    $default  reduce using rule 25 (return_statement)


state 58

   67 expression: '-' expression .
   69           | expression . '+' expression
   70           | expression . '-' expression
   71           | expression . '*' expression
   72           | expression . '/' expression
   73           | expression . '%' expression
   74           | expression . '<' expression
   75           | expression . '>' expression
   76           | expression . GREATER_EQUAL expression
   77           | expression . LESS_EQUAL expression
   78           | expression . NOT_EQUAL expression
   79           | expression . EQUAL expression
   80           | expression . AND expression
   81           | expression . OR expression

    $default  reduce using rule 67 (expression)


state 59

   68 expression: NOT expression .
   69           | expression . '+' expression
   70           | expression . '-' expression
   71           | expression . '*' expression
   72           | expression . '/' expression
   73           | expression . '%' expression
   74           | expression . '<' expression
   75           | expression . '>' expression
   76           | expression . GREATER_EQUAL expression
   77           | expression . LESS_EQUAL expression
   78           | expression . NOT_EQUAL expression
   79           | expression . EQUAL expression
   80           | expression . AND expression
   81           | expression . OR expression

    $default  reduce using rule 68 (expression)


state 60

   17 statement: '{' statement_list . '}'
   61 statement_list: statement_list . statement

    INTEGER      shift, and go to state 4
    FLOAT        shift, and go to state 5
    STRING       shift, and go to state 6
    BOOL         shift, and go to state 7
    VARIABLE     shift, and go to state 8
    IF           shift, and go to state 9
    SWITCH       shift, and go to state 10
    FOR          shift, and go to state 11
    WHILE        shift, and go to state 12
    DO           shift, and go to state 13
    BREAK        shift, and go to state 14
    CONTINUE     shift, and go to state 15
    CONST        shift, and go to state 16
    INT_TYPE     shift, and go to state 17
    FLOAT_TYPE   shift, and go to state 18
    BOOL_TYPE    shift, and go to state 19
    STRING_TYPE  shift, and go to state 20
    VOID_TYPE    shift, and go to state 21
    FUNCTION     shift, and go to state 22
    PRINT        shift, and go to state 23
    RETURN       shift, and go to state 24
    '-'          shift, and go to state 25
    NOT          shift, and go to state 26
    ';'          shift, and go to state 27
    '{'          shift, and go to state 28
    '}'          shift, and go to state 97
    '('          shift, and go to state 29

    statement              go to state 93
    function_declaration   go to state 31
    function_call          go to state 32
    return_statement       go to state 33
    while_statement        go to state 34
    do_while_statement     go to state 35
    for_statement          go to state 36
    if_statement           go to state 37
    switch_statement       go to state 38
    assignment_statement   go to state 39
    declaration_statement  go to state 40
    data_type              go to state 41
    expression             go to state 42


state 61

   69 expression: expression . '+' expression
   70           | expression . '-' expression
   71           | expression . '*' expression
   72           | expression . '/' expression
   73           | expression . '%' expression
   74           | expression . '<' expression
   75           | expression . '>' expression
   76           | expression . GREATER_EQUAL expression
   77           | expression . LESS_EQUAL expression
   78           | expression . NOT_EQUAL expression
   79           | expression . EQUAL expression
   80           | expression . AND expression
   81           | expression . OR expression
   82           | '(' expression . ')'

    OR             shift, and go to state 66
    AND            shift, and go to state 67
    '>'            shift, and go to state 68
    '<'            shift, and go to state 69
    NOT_EQUAL      shift, and go to state 70
    EQUAL          shift, and go to state 71
    LESS_EQUAL     shift, and go to state 72
    GREATER_EQUAL  shift, and go to state 73
    '+'            shift, and go to state 74
    '-'            shift, and go to state 75
    '*'            shift, and go to state 76
    '/'            shift, and go to state 77
    '%'            shift, and go to state 78
    ')'            shift, and go to state 98


state 62

   12 statement: function_call ';' .

    $default  reduce using rule 12 (statement)


state 63

    7 statement: assignment_statement ';' .

    $default  reduce using rule 7 (statement)


state 64

    8 statement: declaration_statement ';' .

    $default  reduce using rule 8 (statement)


state 65

   47 declaration_statement: data_type VARIABLE .
   48                      | data_type VARIABLE . '=' rhs_nested_expression

    '='  shift, and go to state 99

    $default  reduce using rule 47 (declaration_statement)


state 66

   81 expression: expression OR . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 100


state 67

   80 expression: expression AND . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 101


state 68

   75 expression: expression '>' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 102


state 69

   74 expression: expression '<' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 103


state 70

   78 expression: expression NOT_EQUAL . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 104


state 71

   79 expression: expression EQUAL . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 105


state 72

   77 expression: expression LESS_EQUAL . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 106


state 73

   76 expression: expression GREATER_EQUAL . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 107


state 74

   69 expression: expression '+' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 108


state 75

   70 expression: expression '-' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 109


state 76

   71 expression: expression '*' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 110


state 77

   72 expression: expression '/' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 111


state 78

   73 expression: expression '%' . expression

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 55
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 112


state 79

    5 statement: expression ';' .

    $default  reduce using rule 5 (statement)


state 80

   24 function_call: VARIABLE . '(' comma_expressions ')'
   58 rhs_nested_expression: VARIABLE . '=' rhs_nested_expression
   65 expression: VARIABLE .

    '='  shift, and go to state 113
    '('  shift, and go to state 44

    $default  reduce using rule 65 (expression)


state 81

   59 rhs_nested_expression: '(' . VARIABLE '=' rhs_nested_expression ')'
   82 expression: '(' . expression ')'

    INTEGER   shift, and go to state 4
    FLOAT     shift, and go to state 5
    STRING    shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 114
    '-'       shift, and go to state 25
    NOT       shift, and go to state 26
    '('       shift, and go to state 29

    expression  go to state 61


state 82
